fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,20 @@
   max-width: 100%;
   height: 84vh;
   margin: 0 auto;
-  color: white;
+  color: lightgrey;
   display: flex;
   flex-direction: column;
 }
 
+hr {
+  border-color: rgb(1, 200, 200);
+  height: 5px;
+  background-color: rgb(1, 200, 200);
+}
+
 /* .dark-mode {
   background-color: rgb(25, 31, 34);
-  color: white;
+  color: lightgrey;
 }
 
 .dark-button {
