--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(29, 29, 29);
-  color: white;
+  color: lightgrey;
 }
 
 code {
